--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ button:focus {
 
 .lan_funfact .lan_fun_name {
     font-size: 15px;
-    color: rgba(255, 255, 255, 0.7);
+    color:grey;
 }
 
 .bg-funfact {
