change bg of blog

--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,9 @@ button:focus {
 ============================*/
 
 #blog{
-    background-color: #d9d9d9;
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(250,204,255,1) 0%, rgba(0,212,255,1) 100%);
+    
 }
 .blog_video .blog_play {
     position: absolute;
