changed bg of contact us

--- a/css/style.css
+++ b/css/style.css
@@ -388,7 +388,7 @@ button:focus {
         11.CONTACT US
 ============================*/
 #contact{
-    background-color: #dac1c6;
+    background-color: #ead3cd;
 }
 .form-sub-title {
     font-size: 15px;
