--- a/css/style.css
+++ b/css/style.css
@@ -290,13 +290,14 @@ button:focus {
 =============================*/
 
 #education{
-    background-color: #eeb6bb;
-}
+    background: rgb(250,204,255);
+    background: linear-gradient(90deg, rgba(250,204,255,0.913624824929972) 27%, rgba(228,227,252,1) 74%);
+    }
 
 
 .cv_edu_exp .cv_edu_exp_box {
     border-radius: 12px;
-    border: 2px solid #e7e7e7;
+    border: 2px solid #000;
     /* background-color: hsl(355, 62%, 84%);  */
     margin-left: 20px;
     padding: 20px;
