--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,75 @@ background-image: url(../images/blurry-gradient-haikei\ \(1\).svg);
     position: relative;
     background-image: url(../images/testw.avif);
     background-size: cover;
+    animation:animateBg 20s linear infinite;
+}
+
+@keyframes animateBg
+{
+    0%
+    {
+        transform: scale(1);
+    }
+    50%
+    {
+        transform: scale(1.2);
+    }
+}
+.span{
+    /* {} */
+    position:absolute;
+    width:4px;
+    height: 4px;
+    top:50%;
+    left:50%;
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px rgba(238, 238, 238, 0.1),
+    0 0 0 8px rgba(255,255,255,0.1),
+    0 0 0 8px rgba(255,255,255,1,);
+    animation: animate 3s linear infinite;
+}
+
+.span::before{
+    content:'';
+    position:absolute;
+    top:50%;
+    transform:translateY(-50%);
+    width: 300px;
+    height:1px;
+    background: linear-gradient(90deg, #fff, transparent) ;
+}
+@keyframes animate
+{
+    0%
+    {
+        transform: rotate(315deg) translateX(0);
+        opacity:1;
+    }
+
+    70%
+    {
+        opacity: 1;
+    }
+
+    100%
+    {
+        transform: rotate(315deg) translateX(-1000px)
+    }
+}
+.span:nth-child(1){
+    top:0;
+    right:0;
+    animation-delay: 0;
+    animation-duration: 1s;
+}
+
+
+.span:nth-child(2){
+    top:0;
+    right:80px;
+    left:initial;
+    animation-delay: -0.2s;
+    animation-duration: 3s;
 }
 
 /*==========================
